--- a/Website.html
+++ b/Website.html
@@ -366,7 +366,7 @@
             </div>
             <div class="row">
                 <div class="text-center col-sm-6 col-xs-12">
-                    <iframe id="about-video-iframe" src="https://www.youtube.com/embed/WMOPfMAkuyE" allowfullscreen></iframe>
+                    <iframe id="about-video-iframe" src="https://www.youtube.com/embed/Hwq_g5BZshA" allowfullscreen></iframe>
                 </div>
                 <div class="col-sm-6 col-xs-12">
                     <h4>CLIPCO is the non-profit fundraising organization that supports the programs in CLIP that are not funded by normal school district funds. This includes Mandarin curriculum development, Mandarin classroom teaching materials, instructional aides in the classrooms, classroom equipment (PCs &nbsp;&amp;&nbsp; Mandarin software) and Chinese cultural and enrichment activities.</h4><br>
