--- a/donateFAQ.html
+++ b/donateFAQ.html
@@ -39,6 +39,11 @@
             width: 50vw;
         }
 
+		.noborder, .noborder tr, .noborder th, .noborder td { 
+			border: none; 
+			padding: 0 0 0 5rem;
+		}
+
     </style>
 </head>
 <body id="top">
@@ -63,14 +68,21 @@
             <p><strong class="faq-question">Why should I donate?</strong></p>
             <p class="faq-answer">CLIP depends completely on donations to fund the programs not covered by normal school
                 district funds. These programs include the Mandarin Chinese curriculum, CLIP Art program, and Homework
-                Club to name a few. Last year, we raised a total of $314,178 ($246,727 from your generous donations,
-                $67,451 in corporate matches.) Without sufficient donations, CLIP cannot provide these additional
-                programs to its students. </p>
+                Club to name a few. Last year, we raised a total of $321,560 ($258,996 from your generous donations, 
+                $62,564 in corporate matches.) Earlier this year, Cupertino Union School District agreed to contribute 
+                ~$70,000 towards staff and curriculum costs and zero period for 6th grade. With this additional support, 
+                this year’s CLIP budget has been set at $287,625.
+                </p>
+            <p class="faq-answer">The lower budget target has also allowed us to lower the per student donation amount 
+                for this year! This year CLIPCO is asking CLIP families to donate $425 for each child in Kindergarten 
+                to 5th grade, and $200 for each child in 6th to 8th grade to cover their share of CLIP educational 
+                expenses. 
+                </p>
             <p><strong class="faq-question">What does the donation support?</strong></p>
             <p class="faq-answer">Mandarin instructional materials, Mandarin library books, Mandarin homework club,
                 Teacher’s Aides, technology, CLIP Art, student Mandarin assessment tests, and Mandarin curriculum
                 development. Details can be found on the CLIPCO annual budget&nbsp;<a
-                        href="http://www.edline.net/pages/CLIP/Parents/Ways_to_Get_Involved">here</a>.</p>
+                        href="budget.html">here</a>.</p>
             <p><strong class="faq-question">What happens if CLIPCO does not get enough donations? </strong></p>
             <p class="faq-answer">CLIP depends on CLIPCO to raise the funds needed to keep the program running. In the
                 event that CLIPCO is unable to raise the target donation amount, services such as Teacher’s Aides, CLIP
@@ -78,18 +90,23 @@
                 fundraiser campaign. </p>
             <p><strong class="faq-question">How much should I donate? </strong></p>
             <p class="faq-answer">Each year the CLIPCO Board of Directors assesses the amount needed to support the
-                program and determines the suggested donation amount. For the school year 2017-2018, the suggested
-                donation is $450 per student for CLIP Kindergarten to 6th grade students and $225 for CLIP 7th grade to
+                program and determines the suggested donation amount. For the school year 2018-2019, the suggested
+                donation is $425 per student for CLIP Kindergarten to 6th grade students and $200 for CLIP 7th grade to
                 8th grade students. </p>
             <p><strong class="faq-question">How much do the other Mandarin Immersion schools cost? </strong></p>
             <p class="faq-answer">CLIP is the only public Mandarin immersion school program available in the Cupertino
                 Union School District. However, there are private Mandarin immersion school programs in the region.
-                Below are the 2014-2015 tuition fees for two of these private schools. The fees do not include
+                Below are the 2018-2019 tuition fees for two of these private schools. The fees do not include
                 additional fees such as enrollment, registration, and material fees.
-                <br>
-                International School of the Peninsula (Palo Alto) $24,500+
-                <br>
-                Yew Chung International School (Mountain View)$18,800+ </p>
+                <table class="noborder">
+				<tr>
+				<td>International School of the Peninsula (Palo Alto)</td><td>$29,400</td>
+				</tr>
+				<tr>
+				<td>Yew Chung International School (Mountain View)</td><td>$24,950</td>
+				</tr>
+				</table><br>
+            </p>
             <p><strong class="faq-question">What are the methods of donation?</strong></p>
             <p class="faq-answer">Donations can be made by check or credit/debit card.
                 <br>
@@ -103,7 +120,7 @@
                 donate early! Bring your donation to the CLIP table at Meyerholz Back to School Night (August 23rd) to
                 qualify to receive a CLIP window cling for each student whose family donates the minimum ask in their
                 name. For Miller students, turn in your form and check to your child’s CLIP teacher by Friday Aug 25,
-                2017 to qualify for the CLIP window cling.</p>
+                2018 to qualify for the CLIP window cling.</p>
             <p><strong class="faq-question">Why am I been asked to donate at the beginning of the school year?</strong>
             </p>
             <p class="faq-answer">Services provided to CLIP students are billed to CLIPCO by the school district. During
@@ -129,26 +146,30 @@
                 <p>The graph demonstrates that for the 2012-2013 school year, CLIPCO started with $338,000 and spent
                 roughly $300,000 on program expenses, leaving it with just $40,000. However, it raised $290,000 during
                 the same period which kept its cash balance at a stable number throughout the year.</p>
+            <hr id="corporate-matching-scroll" class="scroll-anchor">
+            <br>
             <p><strong class="faq-question" id="corporate-matching">How do I get corporate matching for my donation?</strong></p>
             <p class="faq-answer">CLIPCO is a non-partisan and non-profit 501(3)(c) organization. Many companies provide
                 their employees the benefit of corporate matching for their favorite non-profit organizations. Since
                 each company does it differently, please contact your company’s HR or Benefits department to inquire
                 about how your donation may be maximized through a corporate matching program.
-                <br>
-                Organization name: Cupertino Language Immersion Program Community Organization
-                <br>
-                Organization EIN (Tax ID): 920193803
-                <br>
-                Organization purpose: Financially support the Cupertino Language Immersion Program, an educational
-                program within the Cupertino Union School District.
-                <br>
-                Organization address: P.O. Box 1344, Cupertino, CA 95015
-                <br>
-                Organization contact person: Bin Liao and Sammi Hsu, Co-Treasurers (clipcotreasurer@gmail.com)
+                <table class="noborder">
+					<tr><td>Organization Name</td><td>Cupertino Language Immersion Program Community Organization</td></tr>
+					<tr><td>EIN (Tax ID)</td><td>920193803</td></tr>
+					<tr><td>Purpose</td><td>Financially support the Cupertino Language Immersion Program, an educational
+                program within the Cupertino Union School District.</td></tr>
+					<tr><td>Address</td><td>P.O. Box 1344, Cupertino, CA 95015</td></tr>
+					<tr><td>Contact</td><td>Kevin Jung and Mirna Wu, Co-Treasurers (<a href="email.php?board=treasurer">treasurer@cusdclipco.com</a>)</td></tr>
+				</table><br>
             </p>
             <p><strong class="faq-question">Is my donation tax-deductible?</strong></p>
             <p class="faq-answer">Donations to CLIPCO, a non-profit 501(c)(3) organization, is 100% tax-deductible. We
-                will be sending out the tax receipt to each donor by January 31, 2018.</p>
+                will be sending out the tax receipt to each donor by January 31, 
+                <script>
+                var d = new Date();
+                document.write(d.getFullYear()+ (d.getMonth() > 6 ? 1 : 0));
+                </script>.
+            </p>
             <p><strong class="faq-question">Can I donate on behalf of another family?</strong></p>
             <p class="faq-answer">As long as the family has agreed to accept a donation on their behalf, CLIPCO is happy
                 to accept the generous donation. If you are interested in sponsorship, whether on the giving or the
@@ -173,8 +194,9 @@
         <div class="faq col-sm-12">
             <h2>Questions about the Direct Give Competition</h2>
             <p><strong class="faq-question">When is the contest taking place? </strong></p>
-            <p class="faq-answer">The Contest kicked off on October 17, and it will end at midnight on November 15th,
-                2016. </p>
+            <p class="faq-answer">The Contest date will be annouced soon for this year! Visit the 
+                <a href="direct_give.html">direct give page</a> for more information!
+            </p>
             <p><strong class="faq-question">Why do we need a contest to drive donations?</strong></p>
             <p class="faq-answer">The Direct Give Contest is an annual event that encourages friendly competition to
                 raise funds for CLIP. This is the fifth year that the contest has taken place. Since it started in
@@ -183,8 +205,8 @@
                 donate, the less each family needs to donate in order to keep the program afloat. The high participation
                 rate is also a strong indication of the community’s commitment and support of the program.</p>
             <p><strong class="faq-question">What are the prizes this year?</strong></p>
-            <p class="faq-answer">Continuing the tradition of the contests in the last three years, this year there are
-                three prizes to be had. They are:
+            <p class="faq-answer"><p class="faq-answer">As with last years, CLIPCO is offering three different prizes to encourage a friendly contest:
+            </p>
                 <br>
                 Individual Prize: A CLIP Pencil Case and 2 Pencils – awarded to those donating at least $225 per
                 student.
@@ -203,7 +225,7 @@
                 order to guarantee that the student's name is on the donated list.
                 <br>
                 For the Class and Grand prizes, the winning classes will receive their prizes in December before the end
-                of 2016.
+                of the year.
                 <br>
                 For CLIP Middle school students, the prizes will be distributed by the CLIPCO representatives to their
                 respective classes. </p>
