Update DGC Prizes
Moved the information to a table. Changed the prizes to be TBA for now. Updated the Individual Prize amount to $425.

--- a/donateFAQ.html
+++ b/donateFAQ.html
@@ -207,16 +207,20 @@
             <p><strong class="faq-question">What are the prizes this year?</strong></p>
             <p class="faq-answer"><p class="faq-answer">As with last years, CLIPCO is offering three different prizes to encourage a friendly contest:
             </p>
-                <br>
-                Individual Prize: A CLIP Pencil Case and 2 Pencils – awarded to those donating at least $225 per
-                student.
-                <br>
-                Class Prize: Super cool T-shirt with Our Year of the Rooster Logo – awarded to the home room (Meyerholz)
-                or grade (Miller) that meets 90% participation rate and 90% target dollar amount.
-                <br>
-                Grand Prize: A Sling Backpack with Our Year of the Rooster Logo -- awarded to the top 3 home room
-                (Meyerholz) or grade (Miller) with the highest percentage towards the target dollar amount.
-                <br>
+                <table class="noborder">
+				<tr>
+				<td>Individual Prize</td><td>TBA</td><td>Awarded to those students donating at least $425.</td>
+				</tr>
+				<tr>
+				<td>Class Prize</td><td>TBA</td><td>Awarded to the home room (Meyerholz)
+                or grade (Miller) that meets 90% participation rate and 90% target dollar amount.</td>
+				</tr>
+				<tr>
+				<td>Grand Prize</td><td>TBA</td><td>Awarded to the top 3 home room
+                (Meyerholz) or grade (Miller) with the highest percentage towards the target dollar amount.</td>
+				</tr>
+				</table>
+				<br>
                 <a href="direct_give.html">See Full Contest Details and Rules</a>
             </p>
             <p><strong class="faq-question">When will the winners receive the prizes? </strong></p>
