honor roll changes
Fix misspelling of donation

--- a/honor_roll_2017-2018.html
+++ b/honor_roll_2017-2018.html
@@ -66,7 +66,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"><span class="donation-level-title">Platinum</span><span class="donation-level-range">&nbsp;(dontation of $950 or more)</span></a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"><span class="donation-level-title">Platinum</span><span class="donation-level-range">&nbsp;(Donation of $950 or more)</span></a>
                             </h4>
                         </div>
                         <div id="collapse1" class="panel-collapse collapse">
@@ -112,7 +112,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"><span class="donation-level-title">Gold</span><span class="donation-level-range">&nbsp;(dontation of $700 - $949)</span></a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2"><span class="donation-level-title">Gold</span><span class="donation-level-range">&nbsp;(Donation of $700 - $949)</span></a>
                             </h4>
                         </div>
                         <div id="collapse2" class="panel-collapse collapse">
@@ -139,7 +139,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3"><span class="donation-level-title">Silver</span><span class="donation-level-range">&nbsp;(dontation of $450 - $699)</span></a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3"><span class="donation-level-title">Silver</span><span class="donation-level-range">&nbsp;(Donation of $450 - $699)</span></a>
                             </h4>
                         </div>
                         <div id="collapse3" class="panel-collapse collapse">
@@ -232,7 +232,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><span class="donation-level-title">Bronze</span><span class="donation-level-range">&nbsp;(dontation of $225 - $449)</span></a>
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><span class="donation-level-title">Bronze</span><span class="donation-level-range">&nbsp;(Donation of $225 - $449)</span></a>
                             </h4>
                         </div>
                         <div id="collapse4" class="panel-collapse collapse">
